@@ -967,8 +967,8 @@ class RequestsMock:
         match_querystring: Union[bool, FalseBool] = FalseBool(),
         content_type: Optional[str] = "text/plain",
         match: "_MatcherIterable" = (),
-    ) -> None:
-        self._registry.add(
+    ) -> BaseResponse:
+        return self._registry.add(
             CallbackResponse(
                 url=url,
                 method=method,
